--- a/.css/recerva.css
+++ b/.css/recerva.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Dancing Script", cursive;
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
@@ -16,7 +16,7 @@ body {
 
 h1 {
     text-align: center;
-    color: #333;
+    color: #c55959;
 }
 
 .form-group {
