--- a/index.css
+++ b/index.css
@@ -1,8 +1,69 @@
-header{
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+body{
+    background-color: #104210 ;
+}
+nav{
     background-color: #E7F5D9 ;
     padding: 10px;
+    display: flex;
+    justify-content: space-around;
 }
-h1{
+h1 a{
+    font-family: 'Abril Fatface', sans-serif;
+    font-size: 220%;
     color: #719F1E;
+    padding: 6px 10px ;
     text-decoration: none;
+}
+li a{
+    display:inline-block;
+    font-size: 18px;
+    font-family: 'Agdasima',sans-serif;
+    padding: 5px;
+    color: #1A4314;
+    text-decoration: none;
+    justify-items: space-evenly;
+  
 }
