--- a/index.css
+++ b/index.css
@@ -44,26 +44,58 @@ table {
 body{
     background-color: #104210 ;
 }
-nav{
-    background-color: #E7F5D9 ;
+nav {
+    background-color: #E7F5D9;
     padding: 10px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center; /* Centra verticalmente el contenido */
 }
+
+nav a {
+    font-family: 'Agdasima', sans-serif;
+    color: #1A4314;
+    padding: 10px;
+    text-decoration: none;
+}
+
 h1 a{
     font-family: 'Abril Fatface', sans-serif;
     font-size: 220%;
     color: #719F1E;
-    padding: 6px 10px ;
-    text-decoration: none;
 }
-li a{
-    display:inline-block;
+ul {
+    display: flex;
+    gap: 15px; 
+    list-style: none;
+}
+
+li a {
     font-size: 18px;
-    font-family: 'Agdasima',sans-serif;
+    font-family: 'Agdasima', sans-serif;
     padding: 5px;
     color: #1A4314;
     text-decoration: none;
-    justify-items: space-evenly;
-  
+}
+
+li a:hover {
+    color: #719F1E; /* Cambia el color al pasar el ratón */
+}
+input{
+    border: none;
+    border-bottom: 2px solid #1A4314;
+    border-radius: 10px;
+    height: 25px;
+    width: 100px;
+    margin-top: 2%;
+    
+}
+img{
+    width: 20px;
+    margin-top: 8px;
+}
+.menu{
+    padding: 0;
+
+    font-size: 30px;
 }
