--- a/logout.css
+++ b/logout.css
@@ -14,3 +14,8 @@ body {
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+
+.img{
+    width: 50px;
+    height: 50px;
+}
