--- a/index.css
+++ b/index.css
@@ -19,13 +19,10 @@ time, mark, audio, video {
     font: inherit;
     vertical-align: baseline;
 }
-
-/* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
     display: block;
 }
-
 ol, ul {
     list-style: none;
 }
@@ -42,7 +39,7 @@ table {
     border-spacing: 0;
 }
 
-/* Estilos del cuerpo */
+/* _________________________________________*/
 body {
     background-color: #104210;
     font-family: 'Poppins', sans-serif;
